# argvtype

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md
crates/argvtype-cli/: Cargo.toml
crates/argvtype-cli/src/: main.rs
crates/argvtype-cli/src/commands/: check.rs
crates/argvtype-core/: Cargo.toml
crates/argvtype-core/src/: cfg.rs  check.rs  diagnostic.rs  lib.rs  scope.rs  source_graph.rs  stdlib.rs
crates/argvtype-lsp/: Cargo.toml
crates/argvtype-lsp/src/: lib.rs
crates/argvtype-syntax/: Cargo.toml
crates/argvtype-syntax/src/: annotation.rs  hir.rs  lib.rs  lower.rs  parse.rs  span.rs
crates/argvtype-syntax/src/snapshots/: argvtype_syntax__lower__tests__annotated_function.snap  argvtype_syntax__lower__tests__array_expansion.snap  argvtype_syntax__lower__tests__assignment.snap  argvtype_syntax__lower__tests__echo_hello.snap  argvtype_syntax__lower__tests__for_loop.snap  argvtype_syntax__lower__tests__function.snap  argvtype_syntax__lower__tests__if_statement.snap  argvtype_syntax__lower__tests__param_expansion.snap  argvtype_syntax__lower__tests__pipeline.snap
crates/argvtype-test-harness/: Cargo.toml
crates/argvtype-test-harness/src/: lib.rs
fixtures/: annotated.sh  array_misuse.sh  basic.sh  cd_without_guard.sh  clean.sh  destructive_unquoted.sh  presence_guarded.sh  presence_undeclared.sh  presence_unset.sh  proof_invalidation.sh  type_mismatch.sh  unquoted_expansion.sh
fixtures/source_graph/: cycle_a.sh  cycle_b.sh  dot_source.sh  dynamic_source.sh  lib.sh  main.sh  missing_source.sh
