[workspace]
members = [
    "crates/argvtype-syntax",
    "crates/argvtype-core",
    "crates/argvtype-cli",
    "crates/argvtype-lsp",
    "crates/argvtype-test-harness",
]
resolver = "3"

[workspace.dependencies]
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = { version = "1.46", features = ["yaml"] }

argvtype-syntax = { path = "crates/argvtype-syntax" }
argvtype-core = { path = "crates/argvtype-core" }
argvtype-lsp = { path = "crates/argvtype-lsp" }
