[package]
name = "argvtype-syntax"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
